--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,13 @@
   <title>Shoot The Breeze</title>
 </head>
 <body>
+  <section id="new-chat">
+    <form id="new-message--form">
+      <input type="text" placeholder="Username" id="new-message--username">
+      <div contenteditable placeholder="Type content here..." id="new-message--content"></div>
+      <input type="submit" id="new-message--submit" >
+    </form>
+  </section>
   <div id="application"></div>
   <script src="main.bundle.js"></script>
 </body>
