--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,17 @@
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:700" rel="stylesheet">
 </head>
 <body>
+
+  <header>
+    <h1 class="header-main-title">Shoot the Breeze</h1>
+    <input class="header-nav-input" value="Filter" type="text"></input>
+    <button class="header-main-sort-button-down">Sort</button>
+    <button class="header-main-sort-button-up">Sort</button>
+  </header>
+
+  <section class="sign-in">
+  </section>
+
   <div id="application"></div>
   <script src="main.bundle.js"></script>
 </body>
