--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
   </header>
 
   <section class="sign-in">
+    <button class="sign-in-button">Log in</button>
   </section>
 
   <div id="application"></div>
