logged in user info

--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,16 @@
     <button class="header-main-sort-button-down">Sort</button>
     <button class="header-main-sort-button-up">Sort</button>
   </header>
-
+<!--
   <section class="sign-in">
     <button class="sign-in-button">Log in</button>
+  </section> -->
+
+  <section class='user-info'>
+    <article class="user-info-text-block"
+    <p>Logged in as</p>
+    <p>Madison</p>
+    <p>(madison.kerndt@gmail.com)</p>
   </section>
 
   <div id="application"></div>
