--- a/public/index.html
+++ b/public/index.html
@@ -20,11 +20,19 @@
   </section> -->
 
   <section class='user-info'>
-    <article class="user-info-text-block"
-    <p>Logged in as</p>
-    <p>Madison</p>
-    <p>(madison.kerndt@gmail.com)</p>
+    <article class="user-info-text-block">
+      <p>Logged in as</p>
+      <p>Madison</p>
+      <p>(madison.kerndt@gmail.com)</p>
+    </article>
   </section>
+
+  <footer>
+    <input class="footer-message-input" value="Message" type="text"></input>
+    <p class="character-count">140</p>
+    <button class="footer-submit-button">Submit</button>
+    <button class="footer-clear-button">Clear</button>
+  </footer>
 
   <div id="application"></div>
   <script src="main.bundle.js"></script>
