--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,17 @@
   <title>Shoot The Breeze</title>
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:700" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
-  <header>
+  <!-- <header>
     <h1 class="header-main-title">Shoot the Breeze</h1>
     <input class="header-nav-input" value="Filter" type="text"></input>
-    <button class="header-main-sort-button-down">Sort</button>
-    <button class="header-main-sort-button-up">Sort</button>
+    <article class="header-actions">
+      <button class="header-main-sort-button-down">Sort</button>
+      <button class="header-main-sort-button-up">Sort</button>
+    </article>
   </header>
 
   <main>
@@ -35,30 +38,19 @@
     <ul class="list-users">
       <li>
         <p>Madison Kerndt</p>
-        <p>(madison.kerndt@gmail.com)</p>
+        <p>(madison.kerndt@gmail.com)
         <div class="current-active-user"></div>
+        </p>
       </li>
     </ul>
   </aside>
-<!--
-  <section class="sign-in">
-    <button class="sign-in-button">Log in</button>
-  </section> -->
-
-  <section class='user-info'>
-    <article class="user-info-text-block">
-      <p>Logged in as</p>
-      <p>Madison</p>
-      <p>(madison.kerndt@gmail.com)</p>
-    </article>
-  </section>
 
   <footer>
     <input class="footer-message-input" value="Message" type="text"></input>
     <p class="character-count">140</p>
     <button class="footer-submit-button">Submit</button>
     <button class="footer-clear-button">Clear</button>
-  </footer>
+  </footer> -->
 
   <div id="application"></div>
   <script src="main.bundle.js"></script>
