solves reactDOM error

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
   <div id="application"></div>
-  <script src="main.bundle.js"></script>
+  <script type="text/javascript" src="main.bundle.js"></script>
 </body>
 </html>
