--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style>
+    @import url('https://fonts.googleapis.com/css?family=Fira+Sans');
+  </style>
   <meta charset="utf-8">
   <title>Shoot The Breeze</title>
 </head>
