--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=true;">
   <title>Shoot The Breeze</title>
-  <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
 </head>
 <body>
   <div id="application"></div>
